# models.py
@@ -6,16 +6,105 @@ from marshmallow_sqlalchemy import fields
 
 from config import db, ma
 
+#route
+class Route(db.Model):
+    __tablename__ = "Route"
+    __table_args__ = {'schema': 'CW2'}
+    RouteID = db.Column(db.Integer, primary_key=True)
+    Route_Type = db.Column(db.String, nullable=False)
 
-class Trail(db.Model):
-    __tablename__ = "trail"
+class RouteSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Route
+        load_instance = True
+        sqla_session = db.session
+        include_fk = True
+        
+
+#difficulty
+class Difficulty(db.Model):
+    __tablename__ = "Difficulty"
+    __table_args__ = {'schema': 'CW2'}
+    DifficultyID = db.Column(db.Integer, primary_key=True)
+    Difficulty = db.Column(db.String, nullable=False)
+    length = db.Column(db.Numeric, nullable=False)
+    Elevation_Gain = db.Column(db.Numeric, nullable=False)
+    Duration = db.Column(db.Integer, nullable=False)
+    
+
+class DifficultySchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Difficulty
+        load_instance = True
+        sqla_session = db.session
+        include_fk = True        
+
+
+
+#description
+class Description(db.Model):
+    __tablename__ = "Description"
+    __table_args__ = {'schema': 'CW2'}
+    DescriptionID = db.Column(db.Integer, primary_key=True)
+    Description = db.Column(db.String, nullable=False)
+    Trail_Name = db.Column(db.String, nullable=False)
+    Trail_Location = db.Column(db.String, nullable=False)
+    RouteID = db.Column(db.Integer, nullable=False)
+    DifficultyID = db.Column(db.Integer, nullable=False)
+
+class DescriptionSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Description
+        load_instance = True
+        sqla_session = db.session
+        include_fk = True
+
+
+# tags
+class Tag(db.Model):
+    __tablename__ = "Tags"
+    __table_args__ = {'schema': 'CW2'}
+    TagID = db.Column(db.Integer, primary_key=True)
+    Tag_Name = db.Column(db.String(50))
+    Tag_Type = db.Column(db.String(50))
+
+class TagSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = Tag
+        load_instance = True
+        sqla_session = db.session
+        include_fk = True
+
+
+# user
+class User(db.Model):
+    __tablename__ = "User"
+    __table_args__ = {'schema': 'CW2'}
     id = db.Column(db.Integer, primary_key=True)
-    user_id = db.Column(db.Integer, db.ForeignKey("user.id"))
+    lname = db.Column(db.String(32))
+    fname = db.Column(db.String(32))
+    timestamp = db.Column(db.DateTime, default=datetime.utcnow)
+    password = db.Column(db.String(32))
+    email = db.Column(db.String(50))
+
+class UserSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = User
+        load_instance = True
+        sqla_session = db.session
+        include_fk = True
+
+
+# trail
+class Trail(db.Model):
+    __tablename__ = "Trail"
+    __table_args__ = {'schema': 'CW2'}
+    TrailID = db.Column(db.Integer, primary_key=True)
+    user_id = db.Column(db.Integer, db.ForeignKey('CW2.User.id'))
     content = db.Column(db.String, nullable=False)
-    timestamp = db.Column(
-        db.DateTime, default=lambda: datetime.now(pytz.timezone('Europe/London')),
-        onupdate=lambda: datetime.now(pytz.timezone('Europe/London'))
-    )
+    timestamp = db.Column(db.DateTime, default=datetime.utcnow)
+    Rating = db.Column(db.Numeric)
+    DescriptionID = db.Column(db.Integer, db.ForeignKey('CW2.Description.DescriptionID'))
 
 class TrailSchema(ma.SQLAlchemyAutoSchema):
     class Meta:
@@ -24,33 +113,42 @@ class TrailSchema(ma.SQLAlchemyAutoSchema):
         sqla_session = db.session
         include_fk = True
 
-class User(db.Model):
-    __tablename__ = "user"
-    id = db.Column(db.Integer, primary_key=True, autoincrement=True)
-    lname = db.Column(db.String(32), unique=True)
-    fname = db.Column(db.String(32))
-    timestamp = db.Column(
-        db.DateTime, default=lambda: datetime.now(pytz.timezone('Europe/London')),
-        onupdate=lambda: datetime.now(pytz.timezone('Europe/London'))
-    )
-    trails = db.relationship(
-        Trail,
-        backref="user",
-        cascade="all, delete, delete-orphan",
-        single_parent=True,
-        order_by="desc(Trail.timestamp)"
-    )
 
-class UserSchema(ma.SQLAlchemyAutoSchema):
+# trail_log
+class TrailLog(db.Model):
+    __tablename__ = "Trail_Log"
+    __table_args__ = {'schema': 'CW2'}
+    LogID = db.Column(db.Integer, primary_key=True)
+    TrailID = db.Column(db.Integer, db.ForeignKey('CW2.Trail.TrailID'))
+    Added_By = db.Column(db.String(50), nullable=False)
+    Time_Added = db.Column(db.String(50), nullable=False)
+
+class TrailLogSchema(ma.SQLAlchemyAutoSchema):
     class Meta:
-        model = User
+        model = TrailLog
         load_instance = True
-        sql_session = db.session
-        include_relationships = True
+        sqla_session = db.session
+        include_fk = True
+
+
+# trail_tags
+class TrailTags(db.Model):
+    __tablename__ = "Trail_Tags"
+    __table_args__ = {'schema': 'CW2'}
+    TrailID = db.Column(db.Integer, db.ForeignKey('CW2.Trail.TrailID'), primary_key=True)
+    TagID = db.Column(db.Integer, db.ForeignKey('CW2.Tags.TagID'), primary_key=True)
+
+class TrailTagsSchema(ma.SQLAlchemyAutoSchema):
+    class Meta:
+        model = TrailTags
+        load_instance = True
+        sqla_session = db.session
+        include_fk = True
+
 
     trails = fields.Nested(TrailSchema, many=True)
 
 trail_schema = TrailSchema()
-
+users_schema = TrailSchema(many=True)
 user_schema = UserSchema()
 users_schema = UserSchema(many=True)
